--- a/resources/visualgc_zh_CN.properties
+++ b/resources/visualgc_zh_CN.properties
@@ -1,1 +1,28 @@
+0.last.cause.1={0} \u6700\u8fd1\u539f\u56e0: {1}
+class.loader.time.0.loaded.1.unloaded.2=\u7c7b\u52a0\u8f7d\u65f6\u95f4: {0} \u52a0\u8f7d, {1} \u5378\u8f7d - {2}
+compile.time.0.compiles.1=JIT\u7f16\u8bd1\u65f6\u95f4: {0} \u6b21\u6570 - {1}
+eden.space=\u4f0a\u7538\u533a
+finalizer.queue.length.maximum.0.current.1.local.maximum.2=Finalizer Queue Length: Maximum {0} Current {1} Local Maximum {2}
+finalizer.time.0.objects.1=Finalizer Time: {0} objects - {1}
+gc.time.0.collections.1=GC\u65f6\u95f4: {0} \u6b21\u6536\u96c6, {1}
+graph=\u56fe\u8868
+metaspace=\u5143\u7a7a\u95f4
+not.supported.for.this.jvm=Java\u865a\u62df\u673a\u4e0d\u652f\u6301.
+old.gen=\u5e74\u8001\u4ee3
+perm.gen=\u6301\u4e45\u4ee3
+survivor.0=\u5b58\u6d3b\u533a0
+survivor.1=\u5b58\u6d3b\u533a1
 survivor.age.histogram=\u5b58\u6d3b\u533a\u5e74\u9f84\u76f4\u65b9\u56fe
+collections= \u6b21\u6536\u96c6, 
+old=\u5e74\u8001\u4ee3
+perm=\u6301\u4e45\u4ee3
+eden=\u4f0a\u7538\u533a
+application.information=\u5e94\u7528\u7a0b\u5e8f\u4fe1\u606f
+alive=\u8fd0\u884c    
+elapsed.time=\u5df2\u8fd0\u884c\u65f6\u95f4: 
+java.command.line.0=Java\u547d\u4ee4\u884c: {0}\n\n
+java.vm.arguments.0=Java VM \u53c2\u6570: {0}\n\n
+java.vm.flags.0=Java VM \u6807\u5fd7: {0}\n\n
+dead=\u505c\u6b62     
+s0=\u5b58\u6d3b\u533a0
+s1=\u5b58\u6d3b\u533a1
