--- a/resources/visualgc_zh_CN.properties
+++ b/resources/visualgc_zh_CN.properties
@@ -14,9 +14,9 @@ survivor.0=\u5b58\u6d3b\u533a0
 survivor.1=\u5b58\u6d3b\u533a1
 survivor.age.histogram=\u5b58\u6d3b\u533a\u5e74\u9f84\u76f4\u65b9\u56fe
 collections= \u6b21\u6536\u96c6, 
-old=\u5e74\u8001\u4ee3
-perm=\u6301\u4e45\u4ee3
-eden=\u4f0a\u7538\u533a
+old=\u5e74\u8001
+perm=\u6301\u4e45
+eden=\u4f0a\u7538
 application.information=\u5e94\u7528\u7a0b\u5e8f\u4fe1\u606f
 alive=\u8fd0\u884c    
 elapsed.time=\u5df2\u8fd0\u884c\u65f6\u95f4: 
@@ -24,5 +24,7 @@ java.command.line.0=Java\u547d\u4ee4\u884c: {0}\n\n
 java.vm.arguments.0=Java VM \u53c2\u6570: {0}\n\n
 java.vm.flags.0=Java VM \u6807\u5fd7: {0}\n\n
 dead=\u505c\u6b62     
-s0=\u5b58\u6d3b\u533a0
-s1=\u5b58\u6d3b\u533a1
+s0=\u5b580
+s1=\u5b581
+refresh.rate=\u5237\u65b0\u901f\u5ea6
+msec=\u6beb\u79d2.
