--- a/resources/visualgc_zh_CN.properties
+++ b/resources/visualgc_zh_CN.properties
@@ -28,3 +28,7 @@ s0=\u5b580
 s1=\u5b581
 refresh.rate=\u5237\u65b0\u901f\u5ea6
 msec=\u6beb\u79d2.
+auto=Auto
+spaces=Spaces
+graphs=Graphs
+histogram=Histogram
