--- a/resources/visualgc_zh_CN.properties
+++ b/resources/visualgc_zh_CN.properties
@@ -28,7 +28,19 @@ s0=\u5b580
 s1=\u5b581
 refresh.rate=\u5237\u65b0\u901f\u5ea6
 msec=\u6beb\u79d2.
-auto=Auto
-spaces=Spaces
-graphs=Graphs
-histogram=Histogram
+auto=\u81ea\u52a8
+spaces=\u7a7a\u95f4
+graphs=\u56fe\u8868
+histogram=\u5b58\u6d3b\u76f4\u65b9\u56fe
+gc.collectors.n.time={0} GC \u65f6\u95f4:{1}, {2} \u6b21\u6536\u96c6, {3}
+tenuring.threshold=\u5bf9\u8c61\u664b\u5347\u9608\u503c: 
+max.tenuring.threshold=\u6700\u5927\u5bf9\u8c61\u664b\u5347\u9608\u503c: 
+desired.survivor.size=\u671f\u671b\u5b58\u6d3b\u533a\u5927\u5c0f: 
+current.survivor.size=\u5f53\u524d\u5b58\u6d3b\u533a\u5927\u5c0f: 
+parameters=\u53c2\u6570
+visualgc.3.0.loading.jvm.process.list=VisualGC 3.0, \u6b63\u5728\u8bfb\u53d6 JVM \u8fdb\u7a0b\u5217\u8868 ...
+please.choose.a.process=\u8bf7\u9009\u62e9\u8fdb\u7a0b
+a.visual.garbage.collection.monitoring.tool=\u53ef\u89c6\u5316\u5783\u573e\u56de\u6536\u76d1\u63a7\u5de5\u5177
+info=\u63d0\u793a
+this.tool.created.by=\u672c\u5de5\u5177\u7531 https://github.com/beansoftapp/ \u63d0\u4f9b
+gc.policy.is.0=GC \u7b56\u7565\u662f {0}
