--- a/resources/visualgc_zh_CN.properties
+++ b/resources/visualgc_zh_CN.properties
@@ -44,3 +44,5 @@ a.visual.garbage.collection.monitoring.tool=\u53ef\u89c6\u5316\u5783\u573e\u56de
 info=\u63d0\u793a
 this.tool.created.by=\u672c\u5de5\u5177\u7531 https://github.com/beansoftapp/ \u63d0\u4f9b
 gc.policy.is.0=GC \u7b56\u7565\u662f {0}
+double.click.a.jvm.process.to.start=\u53cc\u51fb JVM \u8fdb\u7a0b\u5f00\u59cb\u67e5\u770b
+jvm.browser=JVM \u6d4f\u89c8\u5668
