add IDEA annotations

--- a/devkit-helper/resources/messages/JavaDocBundle_zh_CN.properties
+++ b/devkit-helper/resources/messages/JavaDocBundle_zh_CN.properties
@@ -1,13 +1,13 @@
 @author=作者:
 @create=创建于:
 @date=日期:
-@see=另请参见:
+@see=请参阅:
 @since=从以下版本开始:
 @throws=抛出:
 @exception=异常:
 @return=返回:
 @param=参数:
-@deprecated=已过时。
+@deprecated=过时的。
 @version=版本:
 @serial=序列化字段:
 @link=链接:
@@ -39,3 +39,11 @@ org.jetbrains.annotations.ApiStatus.OverrideOnly=只允许重载API
 org.jetbrains.annotations.NonNls=不可国际化
 com.intellij.openapi.util.NlsContexts.DetailedDescription=国际化 详细描述
 com.intellij.openapi.util.NlsContexts.Tooltip=国际化 提示信息
+org.jetbrains.annotations.PropertyKey=属性键
+com.intellij.openapi.util.NlsSafe=安全国际化
+org.jetbrains.annotations.SystemIndependent=操作系统无关的路径
+org.jetbrains.annotations.SystemDependent=操作系统相关的路径
+com.intellij.util.concurrency.annotations.RequiresBackgroundThread=需要后台线程执行
+com.intellij.util.concurrency.annotations.RequiresEdt=需要事件调度线程
+com.intellij.util.concurrency.annotations.RequiresReadLock=需要读取锁
+com.intellij.util.concurrency.annotations.RequiresWriteLock=需要写入锁
