--- a/visualgc_java8/resources/visualgc_zh_CN.properties
+++ b/visualgc_java8/resources/visualgc_zh_CN.properties
@@ -1,7 +1,7 @@
 0.last.cause.1={0} \u6700\u8fd1\u539f\u56e0: {1}
 class.loader.time.0.loaded.1.unloaded.2=\u7c7b\u52a0\u8f7d\u5668\u65f6\u95f4: {0} \u5df2\u52a0\u8f7d, {1} \u5df2\u5378\u8f7d - {2}
 compile.time.0.compiles.1=\u7f16\u8bd1\u65f6\u95f4: {0} \u6b21\u7f16\u8bd1 - {1}
-eden.space=\u4f0a\u7538\u533a
+eden.space=Eden Space
 finalizer.queue.length.maximum.0.current.1.local.maximum.2=Finalizer Queue Length: Maximum {0} Current {1} Local Maximum {2}
 finalizer.time.0.objects.1=Finalizer Time: {0} objects - {1}
 gc.time.0.collections.1=GC\u65f6\u95f4: {0} \u6b21\u6536\u96c6, {1}
@@ -16,7 +16,7 @@ survivor.age.histogram=\u5b58\u6d3b\u533a\u5e74\u9f84\u76f4\u65b9\u56fe
 collections= \u6b21\u6536\u96c6, 
 old=\u5e74\u8001
 perm=\u6301\u4e45
-eden=\u4f0a\u7538
+eden=Eden
 application.information=\u5e94\u7528\u7a0b\u5e8f\u4fe1\u606f
 alive=\u8fd0\u884c    
 elapsed.time=\u5df2\u8fd0\u884c\u65f6\u95f4: 
@@ -24,8 +24,8 @@ java.command.line.0=Java\u547d\u4ee4\u884c: {0}\n\n
 java.vm.arguments.0=Java VM \u53c2\u6570: {0}\n\n
 java.vm.flags.0=Java VM \u6807\u5fd7: {0}\n\n
 dead=\u505c\u6b62     
-s0=\u5b580
-s1=\u5b581
+s0=S0
+s1=S1
 refresh.rate=\u5237\u65b0\u901f\u5ea6
 msec=\u6beb\u79d2.
 auto=\u81ea\u52a8
@@ -42,7 +42,7 @@ visualgc.3.0.loading.jvm.process.list=VisualGC 3.0, \u6b63\u5728\u8bfb\u53d6 JVM
 please.choose.a.process=\u8bf7\u9009\u62e9\u8fdb\u7a0b
 a.visual.garbage.collection.monitoring.tool=\u53ef\u89c6\u5316\u5783\u573e\u56de\u6536\u76d1\u63a7\u5de5\u5177
 info=\u63d0\u793a
-this.tool.created.by=\u672c\u5de5\u5177\u7531 https://github.com/beansoftapp/visualgc_java8 \u63d0\u4f9b
+this.tool.created.by=\u672c\u5de5\u5177\u7531  github.com/beansoft/visualgc_java8 \u63d0\u4f9b
 gc.policy.is.0=GC \u7b56\u7565\u662f {0}
 double.click.a.jvm.process.to.start=\u53cc\u51fb JVM \u8fdb\u7a0b\u5f00\u59cb\u67e5\u770b
 jvm.browser=JVM \u6d4f\u89c8\u5668
