optimize CN translation and UI; Fix textarea dark theme display issue

--- a/visualgc_idea/resources/visualgc_zh_CN.properties
+++ b/visualgc_idea/resources/visualgc_zh_CN.properties
@@ -6,13 +6,13 @@ finalizer.queue.length.maximum.0.current.1.local.maximum.2=Finalizer Queue Lengt
 finalizer.time.0.objects.1=Finalizer Time: {0} objects - {1}
 gc.time.0.collections.1=GC\u65f6\u95f4: {0} \u6b21\u6536\u96c6, {1}
 graph=\u56fe\u8868
-metaspace=\u5143\u7a7a\u95f4
+metaspace=Metaspace
 not.supported.for.this.jvm=\u4e0d\u88ab\u5f53\u524dJava\u865a\u62df\u673a\u914d\u7f6e\u652f\u6301.
-old.gen=\u5e74\u8001\u4ee3
-perm.gen=\u6301\u4e45\u4ee3
-survivor.0=\u5b58\u6d3b\u533a0
-survivor.1=\u5b58\u6d3b\u533a1
-survivor.age.histogram=\u5b58\u6d3b\u533a\u5e74\u9f84\u76f4\u65b9\u56fe
+old.gen=Old Gen \u5e74\u8001\u4ee3
+perm.gen=Perm Gen \u6301\u4e45\u4ee3
+survivor.0=Survivor 0 \u5b58\u6d3b\u533a0
+survivor.1=Survivor 1 \u5b58\u6d3b\u533a1
+survivor.age.histogram=Survivor Age Histogram \u5b58\u6d3b\u533a\u5e74\u9f84\u76f4\u65b9\u56fe
 collections= \u6b21\u6536\u96c6, 
 old=\u5e74\u8001
 perm=\u6301\u4e45
@@ -31,7 +31,7 @@ msec=\u6beb\u79d2.
 auto=\u81ea\u52a8
 spaces=\u7a7a\u95f4
 graphs=\u56fe\u8868
-histogram=\u5b58\u6d3b\u76f4\u65b9\u56fe
+histogram=Histogram \u5b58\u6d3b\u76f4\u65b9\u56fe
 gc.collectors.n.time={0} GC \u65f6\u95f4:{1}, {2} \u6b21\u6536\u96c6, {3}
 tenuring.threshold=\u5bf9\u8c61\u664b\u5347\u9608\u503c: 
 max.tenuring.threshold=\u6700\u5927\u5bf9\u8c61\u664b\u5347\u9608\u503c: 
@@ -46,3 +46,5 @@ this.tool.created.by=\u672c\u5de5\u5177\u7531  github.com/beansoft/visualgc_java
 gc.policy.is.0=GC \u7b56\u7565\u662f {0}
 double.click.a.jvm.process.to.start=\u53cc\u51fb JVM \u8fdb\u7a0b\u5f00\u59cb\u67e5\u770b
 jvm.browser=JVM \u6d4f\u89c8\u5668
+stop.monitor=停止监控
+show.reserved.space=显示已预留空间
