--- a/visualgc_idea/resources/visualgc_zh_CN.properties
+++ b/visualgc_idea/resources/visualgc_zh_CN.properties
@@ -48,3 +48,5 @@ double.click.a.jvm.process.to.start=\u53cc\u51fb JVM \u8fdb\u7a0b\u5f00\u59cb\u6
 jvm.browser=JVM \u6d4f\u89c8\u5668
 stop.monitor=停止监控
 show.reserved.space=显示已预留空间
+action.VisualGC.text=新建 VisualGC 窗口
+action.VisualGC.description=在新窗口中运行 VisualGC
