add donate button

--- a/visualgc_idea/resources/visualgc_zh_CN.properties
+++ b/visualgc_idea/resources/visualgc_zh_CN.properties
@@ -50,3 +50,5 @@ stop.monitor=停止监控
 show.reserved.space=显示已预留空间
 action.VisualGC.text=新建 VisualGC 窗口
 action.VisualGC.description=在新窗口中运行 VisualGC
+action.visualgc.MakeCoffeeAction.text=打赏 VisualGC
+action.visualgc.MakeCoffeeAction.description=打赏支持 VisualGC 的未来研发, 本插件将保持免费使用
