--- a/visualgc_idea/resources/visualgc_zh_CN.properties
+++ b/visualgc_idea/resources/visualgc_zh_CN.properties
@@ -1,54 +1,68 @@
-0.last.cause.1={0} \u6700\u8fd1\u539f\u56e0: {1}
-class.loader.time.0.loaded.1.unloaded.2=\u7c7b\u52a0\u8f7d\u5668\u65f6\u95f4: {0} \u5df2\u52a0\u8f7d, {1} \u5df2\u5378\u8f7d - {2}
-compile.time.0.compiles.1=\u7f16\u8bd1\u65f6\u95f4: {0} \u6b21\u7f16\u8bd1 - {1}
+0.last.cause.1={0} 最近原因: {1}
+class.loader.time.0.loaded.1.unloaded.2=类加载器时间: {0} 已加载, {1} 已卸载 - {2}
+compile.time.0.compiles.1=编译时间: {0} 次编译 - {1}
 eden.space=Eden Space
 finalizer.queue.length.maximum.0.current.1.local.maximum.2=Finalizer Queue Length: Maximum {0} Current {1} Local Maximum {2}
 finalizer.time.0.objects.1=Finalizer Time: {0} objects - {1}
-gc.time.0.collections.1=GC\u65f6\u95f4: {0} \u6b21\u6536\u96c6, {1}
-graph=\u56fe\u8868
+gc.time.0.collections.1=GC时间: {0} 次收集, {1}
+graph=图表
 metaspace=Metaspace
-not.supported.for.this.jvm=\u4e0d\u88ab\u5f53\u524dJava\u865a\u62df\u673a\u914d\u7f6e\u652f\u6301.
-old.gen=Old Gen \u5e74\u8001\u4ee3
-perm.gen=Perm Gen \u6301\u4e45\u4ee3
-survivor.0=Survivor 0 \u5b58\u6d3b\u533a0
-survivor.1=Survivor 1 \u5b58\u6d3b\u533a1
-survivor.age.histogram=Survivor Age Histogram \u5b58\u6d3b\u533a\u5e74\u9f84\u76f4\u65b9\u56fe
-collections= \u6b21\u6536\u96c6, 
-old=\u5e74\u8001
-perm=\u6301\u4e45
+not.supported.for.this.jvm=不被当前Java虚拟机配置支持.
+old.gen=Old Gen 年老代
+perm.gen=Perm Gen 持久代
+survivor.0=Survivor 0 存活区0
+survivor.1=Survivor 1 存活区1
+survivor.age.histogram=Survivor Age Histogram 存活区年龄直方图
+collections= 次收集, 
+old=年老
+perm=持久
 eden=Eden
-application.information=\u5e94\u7528\u7a0b\u5e8f\u4fe1\u606f
-alive=\u8fd0\u884c    
-elapsed.time=\u5df2\u8fd0\u884c\u65f6\u95f4: 
-java.command.line.0=Java\u547d\u4ee4\u884c: {0}\n\n
-java.vm.arguments.0=Java VM \u53c2\u6570: {0}\n\n
-java.vm.flags.0=Java VM \u6807\u5fd7: {0}\n\n
-dead=\u505c\u6b62     
+application.information=应用程序信息
+alive=运行    
+elapsed.time=已运行时间: 
+java.command.line.0=Java命令行: {0}\n\n
+java.vm.arguments.0=Java VM 参数: {0}\n\n
+java.vm.flags.0=Java VM 标志: {0}\n\n
+dead=停止     
 s0=S0
 s1=S1
-refresh.rate=\u5237\u65b0\u901f\u5ea6
-msec=\u6beb\u79d2.
-auto=\u81ea\u52a8
-spaces=\u7a7a\u95f4
-graphs=\u56fe\u8868
-histogram=Histogram \u5b58\u6d3b\u76f4\u65b9\u56fe
-gc.collectors.n.time={0} GC \u65f6\u95f4:{1}, {2} \u6b21\u6536\u96c6, {3}
-tenuring.threshold=\u5bf9\u8c61\u664b\u5347\u9608\u503c: 
-max.tenuring.threshold=\u6700\u5927\u5bf9\u8c61\u664b\u5347\u9608\u503c: 
-desired.survivor.size=\u671f\u671b\u5b58\u6d3b\u533a\u5927\u5c0f: 
-current.survivor.size=\u5f53\u524d\u5b58\u6d3b\u533a\u5927\u5c0f: 
-parameters=\u53c2\u6570
-visualgc.3.0.loading.jvm.process.list=VisualGC 3.0, \u6b63\u5728\u8bfb\u53d6 JVM \u8fdb\u7a0b\u5217\u8868 ...
-please.choose.a.process=\u8bf7\u9009\u62e9\u8fdb\u7a0b
-a.visual.garbage.collection.monitoring.tool=\u53ef\u89c6\u5316\u5783\u573e\u56de\u6536\u76d1\u63a7\u5de5\u5177
-info=\u63d0\u793a
-this.tool.created.by=\u672c\u5de5\u5177\u7531  github.com/beansoft/visualgc_java8 \u63d0\u4f9b
-gc.policy.is.0=GC \u7b56\u7565\u662f {0}
-double.click.a.jvm.process.to.start=\u53cc\u51fb JVM \u8fdb\u7a0b\u5f00\u59cb\u67e5\u770b
-jvm.browser=JVM \u6d4f\u89c8\u5668
+refresh.rate=刷新速度
+msec=毫秒.
+auto=自动
+spaces=空间
+graphs=图表
+histogram=Histogram 存活直方图
+gc.collectors.n.time={0} GC 时间:{1}, {2} 次收集, {3}
+tenuring.threshold=对象晋升阈值: 
+max.tenuring.threshold=最大对象晋升阈值: 
+desired.survivor.size=期望存活区大小: 
+current.survivor.size=当前存活区大小: 
+parameters=参数
+visualgc.3.0.loading.jvm.process.list=VisualGC 3.0, 正在读取 JVM 进程列表 ...
+please.choose.a.process=请选择进程
+a.visual.garbage.collection.monitoring.tool=可视化垃圾回收监控工具
+info=提示
+this.tool.created.by=本工具由  github.com/beansoft/visualgc_java8 提供
+gc.policy.is.0=GC 策略是 {0}
+double.click.a.jvm.process.to.start=双击 JVM 进程开始查看
+jvm.browser=JVM 浏览器
 stop.monitor=停止监控
 show.reserved.space=显示已预留空间
 action.VisualGC.text=新建 VisualGC 窗口
 action.VisualGC.description=在新窗口中运行 VisualGC
 action.visualgc.MakeCoffeeAction.text=打赏 VisualGC
-action.visualgc.MakeCoffeeAction.description=打赏支持 VisualGC 的未来研发, 本插件将保持免费使用
+action.visualgc.MakeCoffeeAction.description=打赏支持 VisualGC 的未来研发, 本插件主要功能将保持免费使用
+connect.remote.jvm=连接远程Java虚拟机
+remote.more.info=更多信息请阅读此指南: 如何可视化监视远程JVM
+remote.jvm.help.title=点击此按钮连接到远程助记并监控JVM
+remote.jvm.help.description=必须首先在远程服务器上运行jstatd
+connect.remote.jvm.message=请输入远程服务器地址(示例输入 192.168.3.15 或 192.168.3.15:1099), 输入空值将会连接到本地的 Java 进程
+link.label.error.fetch.jvm.list.please.add.following.lines.to.opened.editor=无法读取Java进程列表: 请向打开的编辑器中添加下列代码!
+dialog.title.please.edit.file.restart.ide=请修改打开的文件并重启开发工具
+link.label.more.info=更多信息
+tooltip.title.unable.to.access.jdk.jvmstat.classes=无法访问 JDK jvmstat 类
+status.text.loading.jvm.process.list=载入 JVM 进程列表中...
+unlock.hint.msg=很抱歉, 由于您未注册插件, ZG算法和远程Java进程监视功能已被锁定. 不过本插件的大部分功能都可以免费使用.\n您是否希望注册插件解锁这些功能或者开始30天免费试用?
+unreg.msg=很抱歉, 您未获取解锁权限. \n 然而本插件的大部分功能仍可以免费使用.
+malformed.vm.identifier.0=无效的 VM 连接地址: {0}
+registed.thanks.message=您已注册 VisualGC.\n感谢您使它变得更好!
